RESOLVED FIXED193588
Regression(PSON) Content blockers are sometimes lost on back navigation cross-site
https://bugs.webkit.org/show_bug.cgi?id=193588
Summary Regression(PSON) Content blockers are sometimes lost on back navigation cross...
Chris Dumez
Reported 2019-01-18 12:44:16 PST
Content blockers are sometimes lost on back navigation cross-site.
Attachments
Patch (9.10 KB, patch)
2019-01-18 12:52 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-01-18 12:44:38 PST
Chris Dumez
Comment 2 2019-01-18 12:52:42 PST
Chris Dumez
Comment 3 2019-01-18 13:54:25 PST
Please disregard the red bubbles, EWS is in a bad state and times out. Mac-wk2 is green so I think we're good.
Chris Dumez
Comment 4 2019-01-18 15:03:00 PST
Comment on attachment 359529 [details] Patch Clearing flags on attachment: 359529 Committed r240178: <https://trac.webkit.org/changeset/240178>
Truitt Savell
Comment 5 2019-01-22 09:55:46 PST
looks like https://trac.webkit.org/changeset/240178/webkit caused 6 api failures on debug https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20WK2%20%28Tests%29/builds/6280 confirmed using: run-api-tests --root debug-240178 --debug these api failures did not occur on debug-240177
Chris Dumez
Comment 6 2019-01-22 10:26:51 PST
(In reply to Truitt Savell from comment #5) > looks like https://trac.webkit.org/changeset/240178/webkit > > caused 6 api failures on debug > https://build.webkit.org/builders/ > Apple%20High%20Sierra%20Debug%20WK2%20%28Tests%29/builds/6280 > > confirmed using: run-api-tests --root debug-240178 --debug > > these api failures did not occur on debug-240177 Investigating, thanks.
Chris Dumez
Comment 7 2019-01-23 11:51:41 PST
API tests fixed via dependency bug.
Note You need to log in before you can comment on or make changes to this bug.